--- a/odin-library-app/style.css
+++ b/odin-library-app/style.css
@@ -11,15 +11,21 @@ html {
 }
 
 .display-container {
-    height: 80px;
-    display: grid;
+    height: 800px;
+    display: flex;
 }
 
 .book-wrapper {
-    height: 90%;
-    width: 12.5%;
+    height: 400px;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
 .book-wrapper > img {
-    width: 100%;
+    height: 300px;
+}
+.book-details {
+    margin-top: 20px;
+    width: 80%;
 }
